--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "A Simple Middleware App to Practice Node.JS!",
   "main": "index.js",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Amir-Pourhadi/Middleware-App.git"
@@ -16,5 +14,9 @@
   "bugs": {
     "url": "https://github.com/Amir-Pourhadi/Middleware-App/issues"
   },
-  "homepage": "https://github.com/Amir-Pourhadi/Middleware-App#readme"
+  "homepage": "https://github.com/Amir-Pourhadi/Middleware-App#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.15"
+  }
 }
